# turboquantcpu

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SOCIAL_MEDIA_POSTS.md  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: docs.yml  tests.yml  workflow.yml
benchmarks/: README.md  competitor_comparison.py  comprehensive_benchmark.py  create_plots.py  needle_in_haystack.py  optimized_benchmark.py  profile_bottlenecks.py  quick_benchmark.py  real_model_benchmark.py  run_all_benchmarks.py  sanity_benchmark.py  validate_benchmarks.py
benchmarks/plots/: results_summary.txt  summary_table.txt
benchmarks/reports/: latest_report.txt
docs/: algorithms.md  api.md  benchmarks.md  changelog.md  contributing.md  huggingface.md  index.md  installation.md  license.md  parameters.md  quickstart.md
examples/: 01_getting_started.py  02_quantization_modes.py  03_long_context.py  04_batch_processing.py  05_api_reference.py  README.md  basic_usage.py
results/: final_benchmark_20260325_201145.json  sanity_benchmark_20260325_161813.json  sanity_benchmark_20260325_162313.json  sanity_benchmark_20260325_185241.json  sanity_benchmark_20260325_200058.json
tests/: __init__.py  test_correctness.py  test_integration.py
turboquantcpu/: __init__.py  benchmark.py  codebooks.py  cpu_features.py  fwht.py  kv_cache.py  patch.py  polar.py  qjl.py  sparse_attn.py  turbo.py  value_quant.py
turboquantcpu/_kernels/: __init__.py  kernels.c
turboquantcpu/backends/: __init__.py
turboquantcpu/cli/: __init__.py  main.py
turboquantcpu/models/: __init__.py
turboquantcpu/server/: __init__.py
