[build-system]
requires = ["setuptools>=61.0", "wheel", "numpy>=1.24"]
build-backend = "setuptools.build_meta"

[project]
name = "turboquantcpu"
version = "0.0.4"
description = "Near-optimal KV cache quantization for CPU LLM inference"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Gaurav Chauhan", email = "2796gaurav@gmail.com"}
]
maintainers = [
    {name = "Gaurav Chauhan", email = "2796gaurav@gmail.com"}
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
    "Environment :: CPU",
    "Framework :: Hugging Face",
]
keywords = [
    "llm", "quantization", "kv-cache", "inference", "cpu", "simd", 
    "avx512", "turboquant", "qjl", "transformers", "memory-optimization",
    "long-context", "edge-computing"
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "torch>=2.0",
]

[project.optional-dependencies]
hf = ["transformers>=4.38", "accelerate>=0.26", "safetensors>=0.4"]
serve = ["fastapi>=0.110", "uvicorn>=0.27", "httpx>=0.27"]
gguf = ["gguf>=0.6.0"]
dev = [
    "pytest>=7",
    "hypothesis",
    "matplotlib",
    "tqdm",
    "psutil",
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.20",
    "mkdocs-git-revision-date-localized-plugin",
    "pymdown-extensions",
]
all = [
    "transformers>=4.38",
    "accelerate>=0.26",
    "safetensors>=0.4",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "httpx>=0.27",
    "gguf>=0.6.0",
    "pytest>=7",
    "hypothesis",
    "matplotlib",
    "tqdm",
    "psutil",
]

[project.scripts]
turboquantcpu = "turboquantcpu.cli.main:main"
tqcpu = "turboquantcpu.cli.main:main"

[project.urls]
Homepage = "https://github.com/2796gaurav/turboquantcpu"
Documentation = "https://2796gaurav.github.io/turboquantcpu"
"Bug Tracker" = "https://github.com/2796gaurav/turboquantcpu/issues"
"Source Code" = "https://github.com/2796gaurav/turboquantcpu"
Paper = "https://arxiv.org/abs/2504.19874"
"QJL Paper" = "https://arxiv.org/abs/2406.03482"

[tool.setuptools]
packages = [
    "turboquantcpu",
    "turboquantcpu._kernels",
    "turboquantcpu.cli",
    "turboquantcpu.backends",
    "turboquantcpu.models",
    "turboquantcpu.server"
]
zip-safe = false

[tool.setuptools.package-data]
turboquantcpu = ["_kernels/*.c", "_kernels/*.so", "_kernels/*.dylib", "_kernels/*.dll"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.coverage.run]
source = ["turboquantcpu"]
omit = ["*/tests/*", "*/_kernels/*"]
