[build-system]
requires = ["setuptools<69", "wheel<0.42", "numpy>=1.24"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "turboquantcpu",
    "turboquantcpu._kernels",
    "turboquantcpu.cli",
    "turboquantcpu.backends",
    "turboquantcpu.models",
    "turboquantcpu.server"
]
zip-safe = false

[tool.setuptools.package-data]
turboquantcpu = ["_kernels/*.c", "_kernels/*.so", "_kernels/*.dylib", "_kernels/*.dll"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.coverage.run]
source = ["turboquantcpu"]
omit = ["*/tests/*", "*/_kernels/*"]
