[build-system]
requires = ["setuptools<69", "wheel<0.42", "numpy>=1.24"]
build-backend = "setuptools.build_meta"

# -- Project metadata (required by modern setuptools validation) -----------
# Most fields are declared dynamic so setup.py remains the authoritative
# source (needed for the custom OptionalBuildExt C-extension logic).
[project]
name = "turboquantcpu"
dynamic = [
    "version",
    "description",
    "readme",
    "license",
    "requires-python",
    "authors",
    "maintainers",
    "keywords",
    "classifiers",
    "urls",
    "dependencies",
    "optional-dependencies",
]

# -- Setuptools-specific configuration ------------------------------------
[tool.setuptools]
packages = [
    "turboquantcpu",
    "turboquantcpu._kernels",
    "turboquantcpu.cli",
    "turboquantcpu.backends",
    "turboquantcpu.models",
    "turboquantcpu.server"
]
zip-safe = false

[tool.setuptools.package-data]
turboquantcpu = ["_kernels/*.c", "_kernels/*.so", "_kernels/*.dylib", "_kernels/*.dll"]

# -- Tool configuration ---------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.coverage.run]
source = ["turboquantcpu"]
omit = ["*/tests/*", "*/_kernels/*"]
